@@ -1,8 +1,42 @@
-EXTRA_DIST = changelog control copyright description.subst hotplug	\
- nut-cgi.config nut-cgi.docs nut-cgi.examples nut-cgi.postinst nut-cgi.postrm	\
- nut-cgi.preinst nut-cgi.README.Debian nut-cgi.templates nut.config	\
- nut.default nut.dirs nut.docs nut.examples nut-hal-drivers.docs	\
- nut.init nut.links nut.postinst nut.postrm nut.preinst nut.prerm	\
- nut.README.Debian nut.templates nut.TODO.Debian \
- rules watch po/ca.po po/cs.po po/de.po po/fr.po po/POTFILES.in		\
- po/pt.po po/pt_BR.po po/templates.pot po/vi.po
+# Please keep this file sorted, with one file entry per line. This makes it
+# easier to track changes.
+EXTRA_DIST = \
+	changelog \
+	control \
+	copyright \
+	description.subst \
+	hotplug	\
+	nut-cgi.config \
+	nut-cgi.docs \
+	nut-cgi.examples \
+	nut-cgi.postinst \
+	nut-cgi.postrm	\
+	nut-cgi.preinst \
+	nut-cgi.README.Debian \
+	nut-cgi.templates \
+	nut.config	\
+	nut.default \
+	nut.dirs \
+	nut.docs \
+	nut.examples \
+	nut-hal-drivers.docs \
+	nut.init \
+	nut.links \
+	nut.postinst \
+	nut.postrm \
+	nut.preinst \
+	nut.prerm	\
+	nut.README.Debian \
+	nut.templates \
+	nut.TODO.Debian \
+	rules \
+	watch \
+	po/ca.po \
+	po/cs.po \
+	po/de.po \
+	po/fr.po \
+	po/POTFILES.in	\
+	po/pt.po \
+	po/pt_BR.po \
+	po/templates.pot \
+	po/vi.po
